--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,6 +48,7 @@ sitemap :
       <div class="row">
         <div>
           <div class="block">
+            <p> * 본 포스트는 개인연구/학습 기록 용도로 작성되고 있습니다. 타 블로거나 외국자료를 참고한 경우가 많으며 그런 경우 하단에 링크를 기록해두었습니다.</p>
             <h1>{{ page.title }}</h1>
             <div class="post-info-wrapper post-img">
               <p class="italic">By <span class="bold">{{ page.author }}</span> on <span class="bold">{{ page.date | date: "%B %-d, %Y" }}</span></p>
